Flushed out cityimages page.

--- a/cityimages.html
+++ b/cityimages.html
@@ -26,9 +26,20 @@
     </nav>
     <main>
 
+        <table>
+            <tr>
+                <td><img src="./images/khajuraho.jpeg" /></td>
+                <td><img src="./images/dhubela.jpeg" /></td>
+            </tr>
+            <tr>
+                <td><img src="./images/bheemkund.jpeg" /></td>
+                <td><img src="./images/ranehfalls.jpeg" /></td>
+            </tr>
+        </table>
+
     </main>
     <footer>
-
+        <p>Website created and maintained by : Ayushi Khare @Pluralsight</p>
     </footer>
 </body>
 </html>
