Updated post html validations

--- a/cityimages.html
+++ b/cityimages.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Photo Gallery</title>
-    <link rel="icon" type="image" href="./images/fav.png">
+    <link rel="icon" type="image/x-icon" href="./images/fav.png">
     <link rel="stylesheet" href="./css/simple-travel-site.css">
 </head>
 <body>
@@ -16,11 +16,11 @@
     <nav id="nav_bar">
         
         <ul>
-            <a href="./index.html"><li>About the city</li></a>
-            <a href=""><li>Must visit</li></a>
-            <a href="./cityimages.html"><li>Shutter clicks</li></a>
-            <a href=""><li>Share your experience</li></a>
-            <a href=""><li>Contact us</li></a>
+            <li><a href="./index.html">About the city</a></li>
+            <li><a href="">Must visit</a></li>
+            <li><a href="./cityimages.html">Shutter clicks</a></li>
+            <li><a href="">Share your experience</a></li>
+            <li><a href="">Contact us</a></li>
         </ul>
         
     </nav>
@@ -28,12 +28,12 @@
 
         <table>
             <tr>
-                <td><img src="./images/khajuraho.jpeg" /></td>
-                <td><img src="./images/dhubela.jpeg" /></td>
+                <td><img src="./images/khajuraho.jpeg" alt="Khajuraho"></td>
+                <td><img src="./images/dhubela.jpeg" alt="Dhubela"></td>
             </tr>
             <tr>
-                <td><img src="./images/bheemkund.jpeg" /></td>
-                <td><img src="./images/ranehfalls.jpeg" /></td>
+                <td><img src="./images/bheemkund.jpeg" alt="Bheemkund"></td>
+                <td><img src="./images/ranehfalls.jpeg" alt="Ranehfall"></td>
             </tr>
         </table>
 
