--- a/cityimages.html
+++ b/cityimages.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,14 +8,17 @@
     <link rel="icon" type="image/x-icon" href="./images/fav.png">
     <link rel="stylesheet" href="./css/simple-travel-site.css">
 </head>
+
 <body>
     <header>
         <img id="header_image" src="./images/header.jpg" alt="Header Sunrise Image">
-         <h1>Welcome to Chhatarpur!</h1>
+        <h1>Welcome to Chhatarpur!</h1>
     </header>
     <hr>
+
+    <!-------------------------NAV BAR----------------------------->
     <nav id="nav_bar">
-        
+
         <ul>
             <li><a href="./index.html">About the city</a></li>
             <li><a href="">Must visit</a></li>
@@ -22,8 +26,10 @@
             <li><a href="">Share your experience</a></li>
             <li><a href="">Contact us</a></li>
         </ul>
-        
+
     </nav>
+
+    <!-------------------------MAIN BODY----------------------------->
     <main>
 
         <table>
@@ -38,8 +44,11 @@
         </table>
 
     </main>
+
+    <!-------------------------FOOTER----------------------------->
     <footer>
         <p>Website created and maintained by : Ayushi Khare @Pluralsight</p>
     </footer>
 </body>
+
 </html>
