--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,14 +8,16 @@
     <link rel="icon" type="image/x-icon" href="./images/fav.png">
     <link rel="stylesheet" href="./css/simple-travel-site.css">
 </head>
+
 <body>
     <header>
         <img id="header_image" src="./images/header.jpg" alt="Header Sunrise Image">
-         <h1>Welcome to Chhatarpur!</h1>
+        <h1>Welcome to Chhatarpur!</h1>
     </header>
     <hr>
+    <!-------------------------NAV BAR----------------------------->
     <nav id="nav_bar">
-        
+
         <ul>
             <li><a href="./index.html">About the city</a></li>
             <li><a href="">Must visit</a></li>
@@ -22,25 +25,41 @@
             <li><a href="">Share your experience</a></li>
             <li><a href="">Contact us</a></li>
         </ul>
-        
+
     </nav>
+
+    <!-------------------------MAIN BODY----------------------------->
     <main>
 
         <p>
-            Chhatarpur is a city and a municipality in Chhatarpur district in the state of Madhya Pradesh, India. It is the administrative headquarters of Chhatarpur District. Chhatarpur is a city and a municipality in Chhatarpur district in the state of Madhya Pradesh, India. It is the administrative headquarters of Chhatarpur District.
+            Chhatarpur is a city and a municipality in Chhatarpur district in the state of Madhya Pradesh, India. It is
+            the administrative headquarters of Chhatarpur District. Chhatarpur is a city and a municipality in
+            Chhatarpur district in the state of Madhya Pradesh, India. It is the administrative headquarters of
+            Chhatarpur District.
         </p>
         <p>
-            Chhatarpur was founded in 1785 and is named after leader Chhatrasal, the founder of Bundelkhand, and contains his cenotaph. The state was ruled by his descendants until 1785. At that time the Ponwar clan of the Rajputs took control of Chhatarpur. The state was guaranteed to Kunwar Sone Singh Ponwar in 1806 by the British Raj. In 1854 Chhatarpur would have lapsed to the British government for want of direct heirs under the doctrine of lapse, but was conferred on Jagat Raj as a special act of grace. The Ponwar Rajas ruled a princely state with an area of 1,118 square miles (2,900 km2), and population of 156,139 in 1901, which was part of the Bundelkhand agency of Central India.
+            Chhatarpur was founded in 1785 and is named after leader Chhatrasal, the founder of Bundelkhand, and
+            contains his cenotaph. The state was ruled by his descendants until 1785. At that time the Ponwar clan of
+            the Rajputs took control of Chhatarpur. The state was guaranteed to Kunwar Sone Singh Ponwar in 1806 by the
+            British Raj. In 1854 Chhatarpur would have lapsed to the British government for want of direct heirs under
+            the doctrine of lapse, but was conferred on Jagat Raj as a special act of grace. The Ponwar Rajas ruled a
+            princely state with an area of 1,118 square miles (2,900 km2), and population of 156,139 in 1901, which was
+            part of the Bundelkhand agency of Central India.
         </p>
         <p>
-            In 1901 the town of Chhatarpur had a population of 10,029, a high school and manufactured paper and coarse cutlery. The state also contained the British cantonment of Nowgong.
+            In 1901 the town of Chhatarpur had a population of 10,029, a high school and manufactured paper and coarse
+            cutlery. The state also contained the British cantonment of Nowgong.
 
         </p>
 
 
     </main>
+
+    <!-------------------------FOOTER----------------------------->
     <footer>
         <p>Website created and maintained by : Ayushi Khare @Pluralsight</p>
     </footer>
+
 </body>
+
 </html>
