--- a/cityimages.html
+++ b/cityimages.html
@@ -32,7 +32,7 @@
     <!-------------------------MAIN BODY----------------------------->
     <main>
 
-        <table>
+        <table class="img_table">
             <tr>
                 <td><img src="./images/khajuraho.jpeg" alt="Khajuraho"></td>
                 <td><img src="./images/dhubela.jpeg" alt="Dhubela"></td>
